# Pomodoro

./: .gitignore  Dockerfile  Makefile  dependency.py  docker-compose.yml  exceptions.py  fixtures.py  gunicorn.conf.py  pomodoro-db.session.sql  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 2ec5decd2dcc_ref_uer_prof_yandex.py  33dd4b13cafc_autoincrement.py  3c42f762f896_фпфшт.py  63258d4e6eab_user_id_in_taskss.py  6d1f33d3bac9_access_token_deleted.py  9043937af58d_ref_user_profile.py  9496f7ede747_make_token_nullable.py  9581bea021e5_user_init.py  d87d0098b4ea_google_auth.py  f9c7dadb9fb1_type.py  fa293d7714fa_deleted_created_at.py  ffc8666896d2_init.py
app/: dependency.py  exceptions.py  main.py
app/infrastructure/cache/: accessor.py
app/infrastructure/database/: __init__.py  accessor.py  database.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/client/: __init__.py  google.py  mail.py  yandex.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: accessor.py
client/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: settings.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/user_profile/: user_repository.py
tests/unit/auth/: test_auth_service.py
worker/: __init__.py  celery.py
